--- a/public/css/style.css
+++ b/public/css/style.css
@@ -312,6 +312,9 @@ header .intro-text {
   padding: 100px 0;
   background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
   color: #fff;
+  position: relative;
+  display: flex;
+
 }
 #services .service-desc {
   margin: 10px 10px 20px;
@@ -441,13 +444,15 @@ header .intro-text {
 }
 /* Team Section */
 #team {
-  padding: 100px 0;
+  padding: 50px 0;
+  width: 60%; /* Adjust as needed */
+  margin: 0 auto;
 }
 #team h4 {
   margin: 5px 0;
 }
 #team .team-img {
-  width: 240px;
+   width: 240px;
 }
 #team .thumbnail {
   background: transparent;
