--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -4231,7 +4231,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   margin-right: -15px;
   margin-left: -15px;
 }
-@media (min-width: 768px) {
+@media (min-width: 668px) {
   .container > .navbar-header,
   .container-fluid > .navbar-header,
   .container > .navbar-collapse,
@@ -4241,7 +4241,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-static-top {
-  z-index: 1000;
+  z-index: 100;
   border-width: 0 0 1px;
 }
 @media (min-width: 768px) {
@@ -4264,7 +4264,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-fixed-top {
   top: 0;
-  border-width: 0 0 1px;
+  border-width: 0 0 0.5px;
+  height: 50px;
 }
 .navbar-fixed-bottom {
   bottom: 0;
@@ -4273,10 +4274,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-brand {
   float: left;
-  height: 50px;
-  padding: 15px 15px;
-  font-size: 18px;
-  line-height: 20px;
+  height: 80px;
+  padding: 5px 15px;
 }
 .navbar-brand:hover,
 .navbar-brand:focus {
@@ -4495,6 +4494,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-default {
   background-color: #f8f8f8;
   border-color: #e7e7e7;
+  height: auto;
 }
 .navbar-default .navbar-brand {
   color: #777;
