--- a/public/css/style.css
+++ b/public/css/style.css
@@ -445,7 +445,7 @@ header .intro-text {
 /* Team Section */
 #team {
   padding: 50px 0;
-  width: 60%; /* Adjust as needed */
+  width: 80%; 
   margin: 0 auto;
 }
 #team h4 {
