--- a/public/css/style.css
+++ b/public/css/style.css
@@ -170,7 +170,7 @@ hr {
   background-image: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
   padding: 14px 34px;
   letter-spacing: 1px;
-  margin: 0;
+  margin: 10px;
   font-size: 15px;
   font-weight: 500;
   border-radius: 25px;
@@ -208,7 +208,7 @@ a:focus,
   display: table;
   width: 100%;
   padding: 0;
-  background: url(../img/intro-bg.jpg) center center no-repeat;
+  background: url(../img/download.jpg) center center no-repeat;
   background-color: #e5e5e5;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -307,8 +307,8 @@ header .intro-text {
   line-height: 24px;
   margin: 30px 0;
 }
-/* Services Section */
-#services {
+/* Workingprocess Section */
+#Workingprocess {
   padding: 100px 0;
   background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
   color: #fff;
@@ -316,13 +316,13 @@ header .intro-text {
   display: flex;
 
 }
-#services .service-desc {
+#Workingprocess .service-desc {
   margin: 10px 10px 20px;
 }
-#services h2 {
+#Workingprocess h2 {
   color: #fff;
 }
-#services .section-title h2::after {
+#Workingprocess .section-title h2::after {
   position: absolute;
   content: "";
   background: rgba(255, 255, 255, 0.3);
@@ -332,7 +332,7 @@ header .intro-text {
   margin-left: -30px;
   left: 50%;
 }
-#services i.fa {
+#Workingprocess i.fa {
   font-size: 42px;
   width: 120px;
   height: 120px;
@@ -342,15 +342,15 @@ header .intro-text {
   color: #fff;
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
 }
-#services h3 {
+#Workingprocess h3 {
   font-weight: 500;
   padding: 5px 0;
   color: #fff;
 }
-#services p {
+#Workingprocess p {
   color: rgba(255, 255, 255, 0.75);
 }
-#services .service-desc {
+#Workingprocess .service-desc {
   margin-bottom: 40px;
 }
 /* Portfolio Section */
