--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,14 +72,15 @@ hr {
 }
 /* Navigation */
 #menu {
-  padding: 15px;
+  padding: 5px;
   transition: all 0.8s;
 }
 #menu.navbar-default {
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.3);
   border-color: rgba(231, 231, 231, 0);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+  /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); */
 }
+
 #menu a.navbar-brand {
   font-family: "Raleway", sans-serif;
   font-size: 24px;
@@ -90,9 +91,9 @@ hr {
 #menu.navbar-default .navbar-nav > li > a {
   font-family: "Lato", sans-serif;
   text-transform: uppercase;
-  color: #555;
+  color: #1d1919;
   font-size: 15px;
-  font-weight: 400;
+  font-weight: 550;
   padding: 8px 2px;
   border-radius: 0;
   margin: 9px 20px 0;
@@ -314,7 +315,6 @@ header .intro-text {
   color: #fff;
   position: relative;
   display: flex;
-
 }
 #Workingprocess .service-desc {
   margin: 10px 10px 20px;
@@ -355,7 +355,7 @@ header .intro-text {
 }
 /* Portfolio Section */
 #portfolio {
-  padding: 100px 0;
+  padding: 120px 0;
 }
 .portfolio-item {
   margin: 1px -15px 0 -14px;
@@ -371,11 +371,7 @@ header .intro-text {
   text-align: center;
   margin: 0 auto;
   color: #fff;
-  background: linear-gradient(
-    to right,
-    rgba(99, 114, 255, 0.8) 0%,
-    rgba(92, 169, 251, 0.8) 100%
-  );
+  background: rgba(255, 255, 255, 0.4);
   padding: 30% 0 0;
   height: 100%;
   width: 100%;
@@ -445,14 +441,14 @@ header .intro-text {
 /* Team Section */
 #team {
   padding: 50px 0;
-  width: 80%; 
+  width: 80%;
   margin: 0 auto;
 }
 #team h4 {
   margin: 5px 0;
 }
 #team .team-img {
-   width: 240px;
+  width: 240px;
 }
 #team .thumbnail {
   background: transparent;
